css/mobile-view.css
:root{
    --open-sans: 'Open Sans', sans-serif;
    --gray:rgb(246, 242, 242);
    --gray-300: rgb(236, 234, 234);
    --gray-500: rgb(192, 187, 187);
    --nykaa-pink: #FC2779;
}



*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    scroll-behavior: smooth;
}


img{
    width: 100%;
    height: 100%;
    object-fit: contain;
}

.btn i:hover{
    cursor: pointer;
}

.container{
    width: 100%;
    height: 100vh;
    /* background-color: #FC2779; */
    /* position: relative; */
}

.mobile-model-container{
    /* background-color: rgb(7, 121, 121); */
    /* width: 100%; */
    min-width: 320px;
    max-width: 768px;
    /* width: 100%; */
    height: 100%;
    max-height: 100%;
    margin-left: auto;
    margin-right: auto;
    position: relative;
    padding: 20px;
}

.navbar-container{
    /* background-color: aliceblue; */
    /* position: absolute; */
    width: 100%;
    min-width: 100%;
    height: 50px;
    min-height: 50px;
    display: flex;
    flex-direction: row;
    align-items: center;
    padding: 20px;
}

.delete-btn {
    margin-right: 25px;
}

.navigate-btns{
    width: 100%;
    text-align: center;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
}


.image-btn, .video-btn{
    text-align: center;
    padding: 5px 20px;
    border: 1px solid var(--gray-300);
}

.image-btn a, .video-btn a{
    text-decoration: none;
    color: #111;
    font-family: var(--open-sans);
    font-size: 14px; 
}

.image-btn a{
color: var(--nykaa-pink);
}

.image-btn{
    background-image: linear-gradient(rgba(252,39,121,0.1), rgba(252,39,121,0.1));
    border: 1px solid rgba(252,39,121,0.5);
}

.main-image-container{
    width: 100%;
    max-width: 100%;
    height: 100%;
    min-height: 100%;
    /* position: relative; */
    /* padding: 20px 0px 100px 0px; */
    position: absolute;
    overflow-x: hidden;
}

.main-image-container::-webkit-scrollbar {
  display: none;
}

.img{
    width: 100%;
    max-height: 100px;
    max-height: 400px;
    position: absolute;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
}

 .img:nth-child(1){
    left: 0%;
}

.img:nth-child(2){
    left: 100%;
}

.img:nth-child(3){
    left: 200%;
}

.img:nth-child(4){
    left: 300%;
}

.img:nth-child(5){
    left: 400%;
}

.img:nth-child(6){
    left: 500%;
}

.img:nth-child(7){
    left: 600%;
}

.img:nth-child(8){
    left: 700%;
}

.img:nth-child(9){
    left: 800%;
}

.img:nth-child(10){
    left: 900%;
} 


.img{
    transform: translateX(0%);
    transition: transform 0.3s ease-in-out;
}

.sticky-div{
    /* max-height: 190px;
    height: 190px; */
    width: 100%;
    max-width: 100%;
    margin-left: auto;
    margin-right: auto;
    position: relative;
    top: 62%;
    overflow: scroll;
}

.sticky-div::-webkit-scrollbar {
  display: none;
}

.mobile-menu-container{
    display: grid;
    grid-template-columns: repeat(11, 1fr);
    padding: 15px 30px; 
}

.mobile-menu{
    margin-right: 10px;
    border: 1px solid #111;
    border-radius: 10px;
    width: 90px;
    height: 95px;
    padding: 5px;
}

.footer-btn{
    width: 100%;
    max-width: 100%;
    margin-top: 20px;
    display: grid;
    grid-template-columns: 30% 70%;
    justify-content: center;
    align-items: center;
    /* padding: 10px 40px; */
    border: 1px solid var(--nykaa-pink);
    position: relative;
    top: 68%;
    border-radius: 5px;
}

 .like-btn{
    padding: 10px;
    text-align: center;
 }

 .like-btn i{
     font-size: 21px;
     color: var(--nykaa-pink)
 }

.cart-btn{
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: var(--nykaa-pink);
    padding: 10px;
    text-align: center;
    text-align: center;
} 

.cart-text{
    padding: 0px 10px;
}

.cart-logo i{
    font-size: 21px;
    color: #fff;
}

.cart-btn .cart-text p{
    font-family: var(--open-sans);
    color: #fff;
    font-weight: 700; 
    font-size: 14px;   
}

.img img{
    transition: transform 0.3s ease-in-out;
}

